// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenCoin renders at a larger size 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={36}
  bbWidth={36}
  focusable={false}
  height={36}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 36,
        "width": 36,
      },
    ]
  }
  vbHeight={20}
  vbWidth={20}
  width={36}
>
  <RNSVGGroup
    fill={
      {
        "payload": 4278190080,
        "type": 0,
      }
    }
  >
    <RNSVGDefs>
      <RNSVGRadialGradient
        cx="35%"
        cy="30%"
        fx="35%"
        fy="30%"
        gradient={
          [
            0,
            -137590,
            0.6,
            -278748,
            1,
            -4959479,
          ]
        }
        gradientTransform={null}
        gradientUnits={0}
        name="cb-coin-2"
        rx="70%"
        ry="70%"
      />
    </RNSVGDefs>
    <RNSVGCircle
      cx="10"
      cy="10"
      fill={
        {
          "brushRef": "cb-coin-2",
          "type": 1,
        }
      }
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      r="9"
      stroke={
        {
          "payload": 4286067983,
          "type": 0,
        }
      }
      strokeWidth="0.6"
    />
    <RNSVGCircle
      cx="10"
      cy="10"
      fill={null}
      opacity={0.5}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      r="6.5"
      stroke={
        {
          "payload": 4286067983,
          "type": 0,
        }
      }
      strokeWidth="0.6"
    />
    <RNSVGText
      content={null}
      dx={[]}
      dy={[]}
      fill={
        {
          "payload": 4286067983,
          "type": 0,
        }
      }
      font={
        {
          "fontFamily": "ChakraPetch-Bold",
          "fontSize": 8.5,
          "fontWeight": "900",
          "textAnchor": "middle",
        }
      }
      propList={
        [
          "fill",
        ]
      }
      rotate={[]}
      x={
        [
          "10",
        ]
      }
      y={
        [
          "13.5",
        ]
      }
    >
      <RNSVGTSpan
        content="C"
        dx={[]}
        dy={[]}
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        font={{}}
        rotate={[]}
        x={[]}
        y={[]}
      />
    </RNSVGText>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`TokenCoin renders at the default size 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  vbHeight={20}
  vbWidth={20}
  width={16}
>
  <RNSVGGroup
    fill={
      {
        "payload": 4278190080,
        "type": 0,
      }
    }
  >
    <RNSVGDefs>
      <RNSVGRadialGradient
        cx="35%"
        cy="30%"
        fx="35%"
        fy="30%"
        gradient={
          [
            0,
            -137590,
            0.6,
            -278748,
            1,
            -4959479,
          ]
        }
        gradientTransform={null}
        gradientUnits={0}
        name="cb-coin-1"
        rx="70%"
        ry="70%"
      />
    </RNSVGDefs>
    <RNSVGCircle
      cx="10"
      cy="10"
      fill={
        {
          "brushRef": "cb-coin-1",
          "type": 1,
        }
      }
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      r="9"
      stroke={
        {
          "payload": 4286067983,
          "type": 0,
        }
      }
      strokeWidth="0.6"
    />
    <RNSVGCircle
      cx="10"
      cy="10"
      fill={null}
      opacity={0.5}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
        ]
      }
      r="6.5"
      stroke={
        {
          "payload": 4286067983,
          "type": 0,
        }
      }
      strokeWidth="0.6"
    />
    <RNSVGText
      content={null}
      dx={[]}
      dy={[]}
      fill={
        {
          "payload": 4286067983,
          "type": 0,
        }
      }
      font={
        {
          "fontFamily": "ChakraPetch-Bold",
          "fontSize": 8.5,
          "fontWeight": "900",
          "textAnchor": "middle",
        }
      }
      propList={
        [
          "fill",
        ]
      }
      rotate={[]}
      x={
        [
          "10",
        ]
      }
      y={
        [
          "13.5",
        ]
      }
    >
      <RNSVGTSpan
        content="C"
        dx={[]}
        dy={[]}
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        font={{}}
        rotate={[]}
        x={[]}
        y={[]}
      />
    </RNSVGText>
  </RNSVGGroup>
</RNSVGSvgView>
`;
